# books

./: .env  Cargo.toml
migrations/2019-10-03-180557_create_books/: up.sql
migrations/2019-10-13-221828_create_users/: up.sql
migrations/2019-10-14-190800_create_users/: up.sql
migrations/2019-10-20-142123_create_users/: up.sql
migrations/2019-10-20-152803_create_books/: up.sql
migrations/2019-10-30-143052_create_books/: up.sql
migrations/2019-11-08-175737_create_authors/: up.sql
migrations/2019-11-08-175740_create_books/: up.sql
migrations/2019-11-08-175804_create_users_books/: up.sql
migrations/2019-11-09-232120_create_authors/: up.sql
migrations/2019-11-09-232131_create_users_books/: down.sql  up.sql
migrations/2019-11-17-203758_create_users/: up.sql
migrations/2019-11-17-203857_create_genres/: down.sql  up.sql
migrations/2019-11-17-203902_create_books/: up.sql
migrations/2019-11-17-203908_create_users_books/: up.sql
src/: db_connection.rs  errors.rs  main.rs  schema.rs
src/handlers/: authentication.rs  authors.rs  books.rs  default.rs  genres.rs  get_current_account.rs  mod.rs  raw_sql_requests.rs  register.rs  users.rs
src/models/: author.rs  book.rs  genre.rs  mod.rs  user.rs  user_book.rs
src/utils/: jwt.rs
