[package]
name = "books_api"
version = "0.1.0"
authors = ["Popugaev Ivan <triziny@inbox.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
actix = "0.8"
actix-identity = "0.1.0"
actix-cors = "0.1.0"
futures = "0.1"
diesel = { version = "1.4.6", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.9.0"
dotenv_codegen="0.14.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4.6", features = ["serde"] }
bcrypt = "0.4.0"
csrf-token = { git = "https://git@github.com/3dom-co-jp/csrf-token.git", branch="v0.2.x" }
hex = "0.3.2"
env_logger = "0.6.1"
log = "0.4.6"
actix-http = "0.2.1"
jsonwebtoken = "6"